--- a/src/app/clients/clients.component.css
+++ b/src/app/clients/clients.component.css
@@ -9,6 +9,14 @@
     display: block;
 }
 
+.card-title {
+    font-size: 1.25rem;
+    margin-bottom: .5rem;
+    line-height: 1.2;
+    font-weight: 500;
+    text-decoration: none;
+}
+
 @media (min-width: 576px) {
     .card-columns {
         column-count: 1;
