--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -7,32 +7,24 @@
     <div class="col">
         <div class="section">
             <span style="float: right">
-                <button class="btn btn-primary" [routerLink]="['/client-create']">Add Client</button>
+                <button class="btn btn-light" routerLink="/client-create">+</button>
             </span>
         </div>
     </div>
 </div>
-
-<!--
-<div class="row">
-        <div class="col">
-            <div class="section">
-                <div class="sectionTitle">Actions</div>
-                <button class="btn btn-primary" [routerLink]="['/client-create']">Add Client</button>
-            </div>
-        </div>
-    </div> -->
 
 <div class="row">
     <div class="col card-columns">
         <div *ngFor="let client of clients?.items">
             <div class="card">
                 <div class="card-body">
-                    <h5 [routerLink]="['/client', client.sys.id]">{{ client.fields.name }}</h5>
-                    <a *ngIf="client.fields.email" class="card-text ml-2" href="mailto:{{client.fields.email}}">{{ client.fields.email
+                    <a class="card-title" href="/client/{{client.sys.id}}">{{ client.fields.name }}</a>
+                    <a *ngIf="client.fields.email" class="card-text ml-2" href="mailto:{{client.fields.email}}">{{
+                        client.fields.email
                         }}
                     </a>
-                    <a *ngIf="client.fields.phone" class="card-text ml-2" href="tel:{{client.fields.phone}}">{{ client.fields.phone
+                    <a *ngIf="client.fields.phone" class="card-text ml-2" href="tel:{{client.fields.phone}}">{{
+                        client.fields.phone
                         }}
                     </a>
                 </div>
