--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -3,10 +3,14 @@ nav {
     font-family: 'Lato', sans-serif;
 }
 
-.logo {
+.logo, .nav-item {
     color: #fff;
     font-family: 'Lato', sans-serif;
     font-size: 1.2em;
+}
+
+.nav-item {
+    float: right;
 }
 
 .nav-row {
@@ -39,11 +43,4 @@ nav {
     .nav-row {
         max-width: 100%;
     }
-}
-
-ul.nav a {
-
-}
-ul.nav a:hover {
-    
 }
