--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,49 +1,41 @@
 <div class="row">
     <div class="col">
-        <div class="sectionTitle">Projects</div>
+        <div class="section">
+            <div class="sectionTitle">Projects</div>
+        </div>
     </div>
 </div>
 
 <div class="row">
-    <div class="col card-columns">
-        <div *ngFor="let project of projects?.items">
-            <div class="card" *ngIf="project.fields.finalImage; else inProgressBlock">
-                <img class="card-img-top img-responsive" src="{{project.fields.finalImage.fields.file.url}}" alt="{{project.fields.title}}">
+    <div class="col card-columns" id="projects-container">
+        <div class="card" *ngFor="let project of projects?.items">
+            <a href="/project/{{project.sys.id}}" class="project-card-link">
+                <!-- three options for image to display:
+                        Based on status and image availability 
+                        1) Final - show final image
+                        2) In Progress - show first regular image
+                        3) No images - show placeholder
+                        -->
+                <img *ngIf="project.fields.finalImage; else inProgressBlock" class="card-img-top img-responsive" src="{{project.fields.finalImage.fields.file.url}}"
+                    alt="{{project.fields.title}}">
+                <ng-template #inProgressBlock>
+                    <img *ngIf="project.fields.assets; else noImage" class="card-img-top img-responsive" src="{{project.fields.assets[0].fields.file.url}}"
+                        alt="{{project.fields.title}}">
+                </ng-template>
+                <ng-template #noImage>
+                    <img class="card-img-top img-responsive" src="https://via.placeholder.com//200x100?text=No+image+yet"
+                        alt="{{project.fields.title}}">
+                </ng-template>
+
                 <div class="card-body">
-                    <a [routerLink]="['/project', project.sys.id]" class="btn btn-primary">{{project.fields.title}}</a>
+                    <!-- TODO: change from BUTTON to LINK-->
+                    <div class="card-title">{{project.fields.title}}</div>
                     <p class="card-text">{{project.fields.style}} - {{project.fields.description}}</p>
                     <div class="card-text">
                         <small class="text-muted">{{project.fields.status}}</small>
                     </div>
                 </div>
-            </div>
-
-            <ng-template #inProgressBlock>
-                <div class="card" *ngIf="project.fields.assets; else noImage">
-                    <img class="card-img-top img-responsive" src="{{project.fields.assets[0].fields.file.url}}" alt="{{project.fields.title}}">
-                    <div class="card-body">
-                        <a [routerLink]="['/project', project.sys.id]" class="btn btn-primary">{{project.fields.title}}</a>
-                        <h5 class="card-title">{{project.fields.title}}</h5>
-                        <p class="card-text">{{project.fields.style}} - {{project.fields.description}}</p>
-                        <div class="card-text">
-                            <small class="text-muted">{{project.fields.status}}</small>
-                        </div>
-                    </div>
-                </div>
-            </ng-template>
-
-            <ng-template #noImage>
-                <div class="card">
-                    <img class="card-img-top img-responsive" src="https://via.placeholder.com//200x100?text=No+image+yet" alt="{{project.fields.title}}">
-                    <div class="card-body">
-                        <a [routerLink]="['/project', project.sys.id]" class="btn btn-primary">{{project.fields.title}}</a>
-                        <p class="card-text">{{project.fields.style}} - {{project.fields.description}}</p>
-                        <div class="card-text">
-                            <small class="text-muted">{{project.fields.status}}</small>
-                        </div>
-                    </div>
-                </div>
-            </ng-template>
+            </a>
         </div>
     </div>
 </div>
