--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,16 +1,16 @@
-<div class="nav-row">
+<div class="nav-row mb-4">
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <div class="logo">
-                <a class="navbar-brand logo" routerLink="/">
+            <div>
+                <a class="logo" routerLink="/">
                     <img alt="Home" src="">
                 </a>
             </div>
-            <div class="nav-item">
-                <a class="navbar-brand logo" routerLink="/clients">{{clientsTitle}}</a>
+            <div>
+                <a class="nav-item" routerLink="/clients">{{clientsTitle}}</a>
             </div>
-            <div class="nav-item">
-                <a class="navbar-brand logo" routerLink="/projects">{{projectsTitle}}</a>
+            <div>
+                <a class="nav-item" routerLink="/projects">{{projectsTitle}}</a>
             </div>
         </div>
     </nav>
