--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -7,9 +7,35 @@
     <div class="col">
         <div class="section">
             <span style="float: right">
-                <button class="btn btn-light" routerLink="/client-create">+</button>
+                <button class="btn btn-light" routerLink="/client-create">
+                    <svg class="icon" width="0.75em" height="0.75em">
+                        <use xlink:href="/assets/symbol-defs.svg#icon-plus"></use>
+                    </svg>
+                </button>
             </span>
         </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col">
+        <div class="section searchSection text-center">
+            <span class="searchResults">
+                <input type="search" class="input" (keydown)="onSearchKeydown($event)" placeholder="search here">
+                {{nowShowing}}
+                <a *ngIf="query != ''" href="/clients">
+                    <svg class="icon ml-1" width="1em" height="1em">
+                        <use xlink:href="/assets/symbol-defs.svg#icon-cancel-circle"></use>
+                    </svg>
+                </a>
+            </span>
+        </div>
+    </div>
+</div>
+
+<div class="row" *ngIf="errorMessage != ''">
+    <div class="col">
+        <h5 class="text-center">{{errorMessage}}</h5>
     </div>
 </div>
 
@@ -35,7 +61,8 @@
 
 <div class="row">
     <div class="col">
-        <button *ngIf="skip > 0" (click)="prevPage();" class="btn btn-light">Previous</button>
-        <button *ngIf="(skip + limit) <= total" (click)="nextPage();" class="btn btn-light">Next</button>
+        <h5 class="searchResults">{{nowShowing}}</h5>
+        <button *ngIf="skip > 0" (click)="prevPage();" onClick="window.scrollTo(0,0);" class="btn btn-light">Previous</button>
+        <button *ngIf="(skip + limit) <= total" (click)="nextPage();" onClick="window.scrollTo(0,0);" class="btn btn-light">Next</button>
     </div>
 </div>
