--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,17 +1,25 @@
 <!-- Footer -->
 <footer class="page-footer mt-4">
 
-  <!-- Footer Elements
+  <!-- Footer Elements -->
   <div class="container">
-<div class="row">
- <div class="col-md-12">
+    <div class="row">
+      <div class="col-md-12">
         <div class="mb-5 flex-center">
-Stuff goes here         
+            <svg class="icon" width="2em" height="2em">
+                <use xlink:href="/assets/symbol-defs.svg#icon-envelop"></use>
+            </svg>
+            <svg class="icon" width="2em" height="2em">
+                <use xlink:href="/assets/symbol-defs.svg#icon-facebook2"></use>
+            </svg>
+            <svg class="icon" width="2em" height="2em">
+                <use xlink:href="/assets/symbol-defs.svg#icon-instagram"></use>
+            </svg>
         </div>
-      </div>      
+      </div>
     </div>
   </div>
-  Footer Elements -->
+  <!-- Footer Elements -->
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2018 Copyright
