--- a/src/app/project-create/project-create.component.html
+++ b/src/app/project-create/project-create.component.html
@@ -111,6 +111,10 @@
           </div>
         </div>
 
+        <!-- 
+        <app-upload></app-upload>
+          -->
+          
         <div class="section actions">
           <button type="submit" class="btn btn-primary" [disabled]="!projectFormGroup.valid">Save Project</button>
           <a class="btn btn-light" href="/projects">Cancel</a>
