--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/* global styles */
 body {
     font-family: 'Open Sans', sans-serif;
     background-color: #efefef;
