Cleaned logging and Karma tests. Fixed bug in project editing form.

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,22 +3,23 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="mb-5 flex-center">
-            <svg class="icon" width="2em" height="2em">
+        <div class="text-center">
+          <a href="mailto:{{email}}">
+            <svg class="icon m-2" width="2em" height="2em">
                 <use xlink:href="/assets/symbol-defs.svg#icon-envelop"></use>
             </svg>
-            <svg class="icon" width="2em" height="2em">
-                <use xlink:href="/assets/symbol-defs.svg#icon-facebook2"></use>
-            </svg>
-            <svg class="icon" width="2em" height="2em">
+          </a>
+          <a href="{{instagram}}" target="new">
+            <svg class="icon m-2" width="2em" height="2em">
                 <use xlink:href="/assets/symbol-defs.svg#icon-instagram"></use>
             </svg>
+          </a>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="footer-copyright text-center py-3">© 2018 Copyright
+  <div class="footer-copyright text-center pb-3">© 2018 Copyright
     <a class="footer-copyright" href="https://inkmeat.com"> InkMeat.com</a>
   </div>
 
