--- a/src/app/test/test-upload/test-upload.component.html
+++ b/src/app/test/test-upload/test-upload.component.html
@@ -1,5 +1,5 @@
 <div >
-  <input class="hidden" id="file" type="file" (change)="onFileSelected($event);" multiple #fileInput>
+  <input class="hidden" id="file" type="file" accept="image/*" (change)="handleInputChange($event)" multiple #fileInput>
   <button type="button" (click)="fileInput.click()">Select Image</button>
   <ul *ngIf="selectedFiles != null">
       <li *ngFor="let file of selectedFiles">
